--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -5,7 +5,7 @@
     <ul>
         <li 
             *ngFor="let todo of todos;" (click)="deleteTodo(todo.id)">
-            {{ todo.content }}
+            {{ todo.content }} - {{ todo.isDone }}
         </li>
     </ul>
     <div>
